[tool.poetry]
name = "martian-robots"
version = "0.1.0"
description = ""
authors = ["Zhenyu Lin <zhenyu.lyn@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
